--- a/index.html
+++ b/index.html
@@ -3,17 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Viaje Educativo | E.E.S.O.</title>
 </head>
 <body>
     <header>
-            <a href="https://www.bcr.com.ar/es" target="_blank"><img class="imgheader" src="./img/BCR.png" alt=""></a>
+        <div class="contenedorHeader">
+            <a href="https://www.bcr.com.ar/es" target="_blank"><img class="imgheaderi" src="./img/BCR.png" alt=""></a>
             <h1>Viaje educativo 5to año</h1> 
-            <a href="https://www.lavirginia.com.ar/" target="_blank"><img class="imgheader" src="./img/LaVirgina.png" alt=""></a>
+            <a href="https://www.lavirginia.com.ar/" target="_blank"><img class="imgheaderi" src="./img/LaVirgina.png" alt=""></a>
+        </div>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">
+                        <img src="./img/logo esc.png" alt="Logo E.E.S.O. N°419" class="logo">
+                    </a>                  
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link activeSoft" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/lavirginia.html">La Virginia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/brc.html">BCR</a>
+                    </li>
+                    </ul>
+                </div>
+                </div>
+            </nav>
     </header>
     <main>
         <div class="contenedor1">
@@ -38,5 +62,6 @@
         <p class="foottext">Desarrollado por Luciano Barberis</p>
         <p class="foottext">Escuela Domingo Faustino Sarmiento N° 419</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
