--- a/pages/brc.html
+++ b/pages/brc.html
@@ -8,36 +8,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
     <title>BCR | E.E.S.O.</title>
 </head>
 <body>
     <header>
-        <div class="contenedorHeader">
-            <a href="https://www.bcr.com.ar/es" target="_blank"><img class="imgheaderi" src="../img/BCR.png" alt=""></a>
-            <h1>Bolsa de Comercio de Rosario</h1> 
-            <a href="https://www.lavirginia.com.ar/" target="_blank"><img class="imgheaderi" src="../img/LaVirgina.png" alt=""></a>
+        <div class="contText">
+            <h1>Viaje Educativo 5to año</h1>
         </div>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img src="../img/logo esc.png" alt="Logo E.E.S.O. N°419" class="logo">
-                    </a>                  
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/lavirginia.html">La Virginia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link activeSoft" aria-current="page" href="#">BCR</a>
-                    </li>
-                    </ul>
-                </div>
-                </div>
-            </nav>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="../img/logo esc.png" class="logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link actives" aria-current="page" href="#">BCR</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./lavirginia.html">La Virginia</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
     </header>
     <main>
     </main>
