--- a/pages/brc.html
+++ b/pages/brc.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
     <title>BCR | E.E.S.O.</title>
 </head>
@@ -42,6 +42,17 @@
         </nav>
     </header>
     <main>
+        <div class="contenedor1">
+            <p>. Los integrantes de 5to año de la institución, el pasado 9 de mayo visitarón la ciudad de Rosario con el fin de concer los procesos productivos de la planta de produción de "La Virginia" y visitar la Bolsa de Comercio de Rosario, investigando sobre su historia y sus mercados.</p>
+            <p>. Los siguientes botones van a llevarlos a visualizar contenido acerca de lo aprendido en este viaje a traves de audiovisuales creados por los alumnos.</p>
+        </div>
+        <div class="contVideos">
+            <div class="boxVideos">
+                <video class="video" src="../video/chiarabcr.mp4" controls></video>
+                <video class="video" src="../video/emmabcr.mp4" controls></video>
+                <video class="video" src="../video/emmabcr.mp4" controls></video>
+            </div>
+        </div>
     </main>
     <footer>
         <p class="foottext">Desarrollado por Luciano Barberis</p>
