--- a/pages/lavirginia.html
+++ b/pages/lavirginia.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
     <title>la Virginia | E.E.S.O.</title>
 </head>
@@ -42,6 +42,16 @@
         </nav>
     </header>
     <main>
+        <div class="contenedor1">
+            <p>. </p>
+        </div>
+        <div class="contVideos">
+            <div class="boxVideos">
+                <video class="video" src="../video/lucaslavirginia.mp4" controls></video>
+                <video class="video" src="../video/lucaslavirginia.mp4" controls></video>
+                <video class="video" src="../video/lucaslavirginia.mp4" controls></video>
+            </div>
+        </div>
     </main>
     <footer>
         <p class="foottext">Desarrollado por Luciano Barberis</p>
