--- a/pages/brc.html
+++ b/pages/brc.html
@@ -48,9 +48,9 @@
         </div>
         <div class="contVideos">
             <div class="boxVideos">
-                <video class="video" src="../video/chiarabcr.mp4" controls></video>
-                <video class="video" src="../video/emmabcr.mp4" controls></video>
-                <video class="video" src="../video/emmabcr.mp4" controls></video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CTpnqqeXDyI?si=-7hN2gilODPLp0Xm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LWiLvEovl1U?si=RcgOZcQXY8nNe4Mc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Gy7DDmIZqig?si=haNFqdJ-rgKX3hzD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </main>
