--- a/pages/lavirginia.html
+++ b/pages/lavirginia.html
@@ -43,13 +43,12 @@
     </header>
     <main>
         <div class="contenedor1">
-            <p>. </p>
+            <p>A continuacion los videos producidos por los alumnmos de 5to acerca de la Planta de Producción de la Virginia</p>
         </div>
         <div class="contVideos">
             <div class="boxVideos">
-                <video class="video" src="../video/lucaslavirginia.mp4" controls></video>
-                <video class="video" src="../video/lucaslavirginia.mp4" controls></video>
-                <video class="video" src="../video/lucaslavirginia.mp4" controls></video>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/D4Ty04pxEts?si=CJhvWcbyQjSczVzW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/XRMJdacIVtw?si=KOgS4FIRmEObZ2FN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </main>
