--- a/pages/brc.html
+++ b/pages/brc.html
@@ -43,8 +43,7 @@
     </header>
     <main>
         <div class="contenedor1">
-            <p>. Los integrantes de 5to año de la institución, el pasado 9 de mayo visitarón la ciudad de Rosario con el fin de concer los procesos productivos de la planta de produción de "La Virginia" y visitar la Bolsa de Comercio de Rosario, investigando sobre su historia y sus mercados.</p>
-            <p>. Los siguientes botones van a llevarlos a visualizar contenido acerca de lo aprendido en este viaje a traves de audiovisuales creados por los alumnos.</p>
+            <p>A continuación los videos producidos por los alumnmos acerca de La Bolsa de Comercio de Rosari</p>
         </div>
         <div class="contVideos">
             <div class="boxVideos">
