--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </header>
     <main>
         <div class="contenedor1">
-            <p>. Los integrantes de 5to año de la institución, el pasado 9 de mayo visitarón la ciudad de Rosario con el fin de concer los procesos productivos de la planta de produción de "La Virginia" y visitar la Bolsa de Comercio de Rosario, investigando sobre su historia y sus mercados.</p>
-            <p>. Los siguientes botones van a llevarlos a visualizar contenido acerca de lo aprendido en este viaje a traves de audiovisuales creados por los alumnos.</p>
+            <p>Los integrantes de 5to año de la institución, el pasado 9 de mayo, visitaron la ciudad de Rosario con el fin de conocer los procesos productivos de la planta de producción de "La Virginia" y visitar la Bolsa de Comercio de Rosario, investigando sobre su historia y sus mercados.</p>
+            <p>Los siguientes botones van a llevarlos a visualizar contenido acerca de lo aprendido en este viaje a través de audiovisuales creados por los alumnos.</p>
         </div>
         <h2>Acompañanos en este viaje...</h2>
         <div class="contenedor2">
