--- a/pages/lavirginia.html
+++ b/pages/lavirginia.html
@@ -43,7 +43,7 @@
     </header>
     <main>
         <div class="contenedor1">
-            <p>A continuacion los videos producidos por los alumnmos de 5to acerca de la Planta de Producción de la Virginia</p>
+            <p>A continuacion los videos producidos por los alumnmos de 5to acerca de la Planta de Producción de la Virginia.</p>
         </div>
         <div class="contVideos">
             <div class="boxVideos">
