--- a/pages/brc.html
+++ b/pages/brc.html
@@ -43,7 +43,7 @@
     </header>
     <main>
         <div class="contenedor1">
-            <p>A continuación los videos producidos por los alumnmos acerca de La Bolsa de Comercio de Rosario</p>
+            <p>A continuación, los videos producidos por los alumnos acerca de la Bolsa de Comercio de Rosario.</p>
         </div>
         <div class="contVideos">
             <div class="boxVideos">
